--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,20 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+# #---Basic Definitions# #
+# Needed for i3-gaps
+for_window [class="^.*"] border pixel 3
+gaps inner 15
+gaps outer 15
+font Pango:San Francisco Display
 set $mod Mod4
+set $term --no-startup-id gnome-terminal
+
+# #---Starting External Scripts ---# #
+# Set the background
+exec --no-startup-id feh --bg-scale ~/Pictures/壁紙/ヱリカとノックス.jpg
+# Set key rate
+exec --no-startup-id xset r rate 350
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -67,7 +80,8 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+Shift+h split h
+# TODO change to something better
+bindsym $mod+Ctrl+Shift+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -169,11 +183,5 @@ bindsym XF86AudioPlay exec playerctl play
 bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
-
-# Use background image
-exec --no-startup-id feh --bg-scale ~/Pictures/壁紙/ヱリカとノックス.jpg
-
-# Set key rate
-exec --no-startup-id xset r rate 350
 
 # vim:filetype=i3
