--- a/config/i3/config
+++ b/config/i3/config
@@ -20,7 +20,7 @@ set $term --no-startup-id gnome-terminal
 
 # #---Starting External Scripts ---# #
 # Set the background
-exec --no-startup-id feh --bg-scale ~/Pictures/壁紙/ヱリカとノックス.jpg
+exec_always --no-startup-id feh --bg-scale ~/Pictures/壁紙/ヱリカとノックス.jpg
 # Set key rate
 exec --no-startup-id xset r rate 350
 # Start redshift
