--- a/config/i3/config
+++ b/config/i3/config
@@ -181,7 +181,7 @@ bindsym $mod+p              exec $pause
 bindsym $mod+a              [instance="math"] scratchpad show; [instance="math"] move position center
 #bindsym $mod+Shift+a        exec $term -e ncpamixer
 
-bindsym $mod+s              gaps inner gurrent plus 5
+bindsym $mod+s              gaps inner current plus 5
 bindsym $mod+Shift+s        gaps inner current minus 5
 
 bindsym $mod+d              exec --no-startup-id dmenu_run
