--- a/config/i3/config
+++ b/config/i3/config
@@ -37,6 +37,9 @@ exec --no-startup-id nm-applet
 # Start redshift
 exec --no-startup-id redshift-gtk
 
+new_window normal 0 px
+hide_edge_borders both
+
 bar {
     tray_output None
     mode invisible
